Update README and LaTeX files for Marathi bird guide with new entries and corrections

--- a/latex/bird_guide_marathi.tex
+++ b/latex/bird_guide_marathi.tex
@@ -363,7 +363,7 @@
   {पावसाळ्यात प्रजनन. मोठ्या झाडांवर मंचासारखे घरटे. २-४ फिकट निळसर-पांढरी अंडी.}
   {red-naped-ibis.jpg}
 
-\birdentry{शाहीन ससाणा}{\textit{Falco peregrinus}}
+\birdentry{बहिरी ससाणा}{\textit{Falco peregrinus}}
   {घारीएवढा}
   {दुर्मिळ हिवाळी पाहुणा}
   {मोठा, शक्तिशाली ससाणा. वरचा भाग गडद करडा, खालून पट्टेदार. काळा 'मिशांसारखा' पट्टा विशिष्ट.}
@@ -561,7 +561,7 @@
   {फेब्रुवारी ते एप्रिल प्रजनन. जमिनीच्या कडेत भुयार खणून घरटे. ५-७ पांढरी अंडी घालतो.}
   {common-kingfisher.jpg}
 
-\birdentry{हरवा पोपई}{\textit{Merops orientalis}}
+\birdentry{वेडा राघू}{\textit{Merops orientalis}}
   {चिमणीपेक्षा मोठा}
   {सामान्य स्थानिक}
   {बारीक हिरवा पक्षी, निळा गळा, काळी डोळ्यांची पट्टी. लांब मधली शेपटीची पिसे ठळक.}
@@ -615,7 +615,7 @@
   {पुलांखाली व इमारतींवर मातीचे वाटीसारखे घरटे. २-३ पांढरी अंडी. दोन्ही पालक १४-१६ दिवस उबवतात.}
   {wire-tailed-swallow.jpg}
 
-\birdentry{लांब पुच्छी खंजीर}{\textit{Lanius schach}}
+\birdentry{लांब शेपटीचा खाटीक}{\textit{Lanius schach}}
   {बुलबुलापेक्षा मोठा}
   {सामान्य स्थानिक}
   {करडा-तपकिरी वरचा भाग, खालून पांढरा. डोळ्यातून काळी पट्टी. लांब टोकदार शेपटी.}
@@ -651,7 +651,7 @@
   {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
   {ashy-drongo.jpg}
 
-\birdentry{सामान्य मैना}{\textit{Acridotheres tristis}}
+\birdentry{साळुंकी}{\textit{Acridotheres tristis}}
   {मैना}
   {अतिसामान्य स्थानिक}
   {तपकिरी शरीर, काळे डोके, पिवळी चोच व पाय. उडताना पंखांवर पांढरे पट्टे दिसतात.}
@@ -696,7 +696,7 @@
   {मुख्यतः मार्च ते सप्टेंबर प्रजनन. झाडाच्या फांदीवर नीटनेटके वाटीसारखे घरटे. २-३ क्रीम रंगाची, तांबूस ठिपक्यांची अंडी.}
   {spot-breasted-fantail.jpg}
 
-\birdentry{काळ्या डोक्याचा चिंचगव्हाळ}{\textit{Saxicola caprata}}
+\birdentry{कवड्या गप्पीदास}{\textit{Saxicola caprata}}
   {बुलबुलापेक्षा लहान}
   {सामान्य स्थानिक}
   {नर काळा, पांढरी कंबर व पंखांवर पट्टे; मादी तपकिरी, खालून फिकी.}
@@ -795,7 +795,7 @@
   {पावसाळ्यात प्रजनन. नर अनेक टोपीसारखी घरटी बांधतो. २-४ पांढरी अंडी.}
   {baya-weaver.jpg}
 
-\birdentry{शामा}{\textit{Copsychus fulicatus}}
+\birdentry{चरक}{\textit{Copsychus fulicatus}}
   {चिमणी}
   {सामान्य स्थानिक}
   {नर चमकदार काळा, पंखांवर पांढरे पट्टे. मादी तपकिरी. शेपटी नेहमी वर धरून असतो.}
@@ -804,7 +804,7 @@
   {मार्च ते सप्टेंबर प्रजनन. भिंतीच्या भेगा व जमिनीत घरटे. २-४ पांढरी, तपकिरी ठिपक्यांची अंडी.}
   {indian-robin.jpg}
 
-\birdentry{चष्मेबाला}{\textit{Zosterops palpebrosus}}
+\birdentry{चष्मेवाला}{\textit{Zosterops palpebrosus}}
   {चिमणीपेक्षा लहान}
   {सामान्य स्थानिक}
   {छोटा जैतुनी-हिरवा पक्षी, डोळ्याभोवती पांढरा कडा विशिष्ट. पिवळा गळा व शेपटीखालचा भाग.}
@@ -858,7 +858,7 @@
   {फेब्रुवारी ते एप्रिल प्रजनन. झाडांच्या पोकळीत व जुन्या इमारतींमध्ये घरटे. ३-५ पांढरी अंडी. नर अन्न आणतो, मादी २८-३० दिवस अंडी उबवते.}
   {spotted-owlet.jpg}
 
-\birdentry{ठिपकेवाला वन घुबड}{\textit{Strix ocellata}}
+\birdentry{ठिपकेवाले वन घुबड}{\textit{Strix ocellata}}
   {कावळ्यापेक्षा मोठा}
   {दुर्मिळ स्थानिक}
   {मोठा घुबड, विशिष्ट ठिपकेदार तपकिरी पिसारा. गोल डोके, कान-शिखा नाहीत. काळे डोळे, पिवळट-हिरवी चोच.}
@@ -867,7 +867,7 @@
   {डिसेंबर ते मार्च प्रजनन. झाडांच्या नैसर्गिक पोकळीत घरटे. २-३ पांढरी अंडी. नर अन्न आणतो, मादी अंडी उबवते.}
   {mottled-wood-owl.jpg}
 
-\birdentry{धनेश}{\textit{Ocyceros birostris}}
+\birdentry{भारतीय राखी धनेश}{\textit{Ocyceros birostris}}
   {कावळा}
   {सामान्य स्थानिक}
   {मोठा करडा पक्षी, लांब शेपटी व टोपीसारखी वाढ चोचीवर. मादीची टोपी लहान.}
@@ -876,7 +876,7 @@
   {मार्च ते जून प्रजनन. मादी स्वतःला झाडाच्या पोकळीत कोंडून घेते, एक छोटी फट सोडते. नर तिला व पिलांना खाऊ घालतो. २-४ पांढरी अंडी.}
   {indian-grey-hornbill.jpg}
 
-\birdentry{नीलकंठ}{\textit{Coracias benghalensis}}
+\birdentry{भारतीय नीलपंख}{\textit{Coracias benghalensis}}
   {मैनेपेक्षा बराच मोठा}
   {सामान्य स्थानिक}
   {कावळ्याएवढा पक्षी, चमकदार निळे पंख व शेपटी. तपकिरी डोके व पाठ.}
@@ -894,7 +894,7 @@
   {एप्रिल ते जुलै प्रजनन. फांदीवर छोटे वाटीसारखे घरटे. २-३ करडी-हिरवट, तपकिरी ठिपक्यांची अंडी.}
   {black-headed-cuckoo-shrike.jpg}
 
-\birdentry{छोटा मिनिवेट}{\textit{Pericrocotus cinnamomeus}}
+\birdentry{छोटा गोमेट}{\textit{Pericrocotus cinnamomeus}}
   {चिमणी}
   {सामान्य स्थानिक}
   {नर काळा व नारिंगी; मादी करडी व पिवळी. दोघांनाही लांब शेपटी.}
