Enhance Marathi bird guide

--- a/latex/bird_guide_marathi.tex
+++ b/latex/bird_guide_marathi.tex
@@ -99,8 +99,6 @@
 }
 
 % Set up bullet point symbol
-\newcommand{\devanagariitem}{{\devanagarifont ●}}
-%\renewcommand{\labelitemi}{\devanagariitem}
 \renewcommand{\labelitemi}{{\latinfont\textbullet}}
 
 % Define sectionfont command before using it
@@ -241,7 +239,8 @@
 }
 
 \vspace{0.5cm}
-{\small अधिक माहितीसाठी भेट द्या: {\latinmono https://creativecommons.org/licenses/by-nc-sa/4.0/}}
+{\small अधिक माहितीसाठी भेट द्या: 
+{\latintext \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{https://creativecommons.org/licenses/by-nc-sa/4.0/}}}
 
 \vspace{1cm}
 
@@ -253,9 +252,9 @@
 \chapter*{परिचय}
 
 \introsection{%
-  \section*{परिसराचा आढावा}
-  सावित्रीबाई फुले पुणे विद्यापीठ ({\latintext SPPU}) कॅम्पस, शहराच्या मध्यभागी असलेले ४११ एकर (१६६.३३ हेक्टर) क्षेत्रफळ असलेले 
-  जैवविविधता हॉटस्पॉट आहे. {\latintext 18.5529°N 73.8352°E} अक्षांश-रेखांशावर, हा कॅम्पस समुद्रसपाटीपासून अंदाजे ५६० मीटर उंचीवर आहे.
+  \section*{\textbf{परिसराचा आढावा}}
+  सावित्रीबाई फुले पुणे विद्यापीठ ({\latintext SPPU}) परिसर, शहराच्या मध्यभागी असलेले ४११ एकर (१६६.३३ हेक्टर) क्षेत्रफळ असलेले 
+  जैवविविधता हॉटस्पॉट आहे. {\latintext 18.5529°N 73.8352°E} अक्षांश-रेखांशावर, हा परिसर समुद्रसपाटीपासून अंदाजे ५६० मीटर उंचीवर आहे.
 }{%
   \section*{कॅम्पसचे वातावरण}
   कॅम्पसमध्ये विविध अधिवास आहेत, जे विविध प्रकारच्या पक्ष्यांसाठी उपयुक्त आहेत. या भूभागात मूळ आणि विदेशी झाडे, गवताळ प्रदेश, लॉन, कृत्रिम जलाशय,
@@ -263,7 +262,7 @@
 }
 
 \introsection{%
-  \section*{वनस्पती आणि झाडी}
+  \section*{\textbf{वनस्पती आणि झाडी}}
   विद्यापीठाच्या परिसरात १५० हून अधिक प्रकारची झाडे आहेत, ज्यामुळे हे एक शहरी वन बनले आहे. 
   वड ({\latintext \textit{Ficus benghalensis}}), पिंपळ ({\latintext \textit{Ficus religiosa}}), 
   कडुलिंब ({\latintext\textit{Azadirachta indica}}) आणि काटेसावर  ({\latintext \textit{Bombax ceiba}}) 
@@ -272,7 +271,7 @@
   आणि कॉपर पॉड ({\latintext \textit{Peltophorum pterocarpum}}) विविधतेत भर घालतात. ही समृद्ध वनस्पती विविध पक्षी प्रजातींसाठी आवश्यक घरटी बांधण्याची जागा, 
   निवारा आणि अन्नाचे स्रोत पुरवते.
 }{%
-  \section*{मानवी हस्तक्षेप}
+  \section*{\textbf{मानवी हस्तक्षेप}}
   कॅम्पस परिसंस्थेवर विविध मानवी क्रियाकलापांचा दबाव आहे, ज्यामुळे पक्ष्यांच्या लोकसंख्येवर परिणाम होतो:
   \begin{itemize}
   \item कॅम्पस रस्त्यांवर नियमित वाहनांची वर्दळ
@@ -285,7 +284,7 @@
 }
 
 \introsection{%
-  \section*{कधी पाहावे}
+  \section*{\textbf{कधी पाहावे}}
   \textbf{दिवसाची वेळ:}
   \begin{itemize}
   \item पहाटे (सकाळी ६:००-९:००): पक्षी नाश्त्यासाठी फिरत असल्याने सर्वाधिक क्रियाशील
@@ -294,7 +293,7 @@
   \item संध्याकाळ: घुबडांसारख्या निशाचर प्रजाती सक्रिय होण्याची उत्तम वेळ
   \end{itemize}
 }{%
-  \section*{हंगामानुसार:}
+  \section*{\textbf{हंगामानुसार:}}
   \begin{itemize}
   \item हिवाळा (नोव्हेंबर-फेब्रुवारी): अनेक हिवाळी पाहुण्यांमुळे सर्वोत्तम
   \item पावसाळा (जून-सप्टेंबर): {\latintext Breeding activities} पाहण्यासाठी सर्वोत्तम
@@ -304,8 +303,8 @@
 }
 
 \introsection{%
-  \section*{आभार}
-  {\latintext SPPU} कॅम्पसमधील पक्ष्यांची नोंद eBird द्वारे ({\latintext
+  \section*{\textbf{आभार}}
+  {\latintext SPPU} कॅम्पसमधील पक्ष्यांची नोंद {\latintext eBird} द्वारे ({\latintext
   \href{https://ebird.org/hotspot/L1838309}{SPPU eBird Hotspot}})
   करण्यात ज्या पक्षी निरीक्षकांनी योगदान दिले त्यांचे विशेष आभार.
 }{%
@@ -313,7 +312,7 @@
 }
 
 \introsection{%
-  \section*{कसे पाहावे}
+  \section*{\textbf{कसे पाहावे}}
   \textbf{आवश्यक उपकरणे:}
   \begin{itemize}
   \item दुर्बीण: नवशिक्यांसाठी {\latintext 8 X 42} किंवा {\latintext 10 X 42} उत्तम
@@ -321,7 +320,7 @@
   \item नोंदी घेण्यासाठी वही
   \end{itemize}
 }{%
-  \section*{उपयुक्त ॲप्स:}
+  \section*{\textbf{उपयुक्त ॲप्स:}}
   \begin{itemize}
   \item {\latintext eBird}: नोंदी करण्यासाठी आणि हॉटस्पॉट एक्सप्लोर करण्यासाठी
   \item {\latintext Merlin Bird ID}: फोटो किंवा आवाजावरून पक्षी ओळखण्यास मदत करते
@@ -330,7 +329,7 @@
 }
 
 \introsection{%
-  \section*{अधिक टिप्स}
+  \section*{\textbf{अधिक टिप्स}}
   \begin{itemize}
   \item आजूबाजूच्या वातावरणाशी जुळण्यासाठी माती रंगाचे कपडे वापरा
   \item पक्ष्यांना त्रास होऊ नये म्हणून हळू आणि शांतपणे चाला
@@ -339,11 +338,9 @@
   \item प्रत्येक {\latintext Session} नंतर {\latintext eBird} मध्ये आपल्या नोंदी रेकॉर्ड करा
   \end{itemize}
 }{%
-  \section*{या मार्गदर्शिकेबद्दल}
+  \section*{\textbf{या मार्गदर्शिकेबद्दल}}
   या पुस्तिकेत विद्यापीठ परिसरात आढळणाऱ्या विविध पक्षी प्रजातींची माहिती आहे. कॅम्पसमध्ये नोंदवलेल्या पक्ष्यांच्या प्रजातींपैकी सर्वात सामान्य प्रजाती, ज्या सुमारे ७० आहेत, त्यांचा समावेश येथे केला आहे.
 }
-
-%\chapter{पक्षी}
 
 \birdentry{घार}{\textit{Milvus migrans}}
   {घारीएवढा}
