Update Marathi bird guide PDF with latest revisions

--- a/latex/bird_guide_marathi.tex
+++ b/latex/bird_guide_marathi.tex
@@ -221,7 +221,7 @@
 % Add license text after title
 \begin{center}
 \vspace{1cm}
-{\large हे काम क्रिएटिव्ह कॉमन्स अट्रिब्यूशन-नॉनकमर्शियल-शेअरअलाइक ४.० आंतरराष्ट्रीय परवान्यांतर्गत ({\latintext CC BY-NC-SA 4.0}) उपलब्ध आहे.}
+{\large हे पुस्तक  क्रिएटिव्ह कॉमन्स अट्रिब्यूशन-नॉनकमर्शियल-शेअरअलाइक ४.० आंतरराष्ट्रीय परवान्यांतर्गत ({\latintext CC BY-NC-SA 4.0}) उपलब्ध आहे.}
 
 \vspace{0.5cm}
 {\normalsize आपल्याला खालील गोष्टींची मुभा आहे:
@@ -344,7 +344,7 @@
 
 \birdentry{घार}{\textit{Milvus migrans}}
   {घारीएवढा}
-  {अतिसामान्य स्थानिक}
+  {अतिनेहमी आढळणारा स्थानिक}
   {मोठा शिकारी पक्षी. काटेरी शेपटी आणि लांब पंख हे वैशिष्ट्य. पंख काळसर तपकिरी, तळाशी किंचित फिकट.}
   {परिसरातील सर्वत्र}
   {उंच आकाशात गरगर फिरताना दिसते. लहान सस्तन प्राणी, पक्षी आणि मृत प्राणी खाते.}
@@ -353,7 +353,7 @@
 
 \birdentry{काळा शराटी}{\textit{Pseudibis papillosa}}
   {घारीएवढा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {मोठा काळा पक्षी, मानेवर लाल पट्टा. लांब वाकडी चोच आणि डोक्यावरील उघडा लाल भाग ठळक.}
   {परिसरातील मोकळ्या जागा, गवताळ प्रदेश आणि पाणवठे}
   {हळूहळू चालत शिकार करतो. लहान गटात आढळतो. कीटक आणि लहान प्राणी खातो.}
@@ -371,7 +371,7 @@
 
 \birdentry{शिक्रा}{\textit{Accipiter badius}}
   {मैनेपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {छोटा ससाणा, लाल डोळे आणि पट्टेदार छाती विशिष्ट. वरून करडा, खालून पांढरा, तांबूस पट्ट्यांसह.}
   {परिसरातील वृक्षराजी आणि बागा}
   {लहान पक्षी, सस्तन प्राणी आणि कीटक खातो. खूप चपळ शिकारी.}
@@ -380,7 +380,7 @@
 
 \birdentry{पांढऱ्या छातीची पाणकोंबडी}{\textit{Amaurornis phoenicurus}}
   {बुलबुलापेक्षा मोठी}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {मध्यम आकाराचा पक्षी. पांढरा चेहरा, गळा, छाती; गडद तपकिरी शरीर. चोचीजवळ लाल पट्टा.}
   {परिसरातील पाणवठे आणि दलदलीचे भाग}
   {पाण्याजवळ राहते. कीटक, छोटे मासे आणि वनस्पती खाते.}
@@ -389,7 +389,7 @@
 
 \birdentry{ढोकरी}{\textit{Ardeola grayii}}
   {मैनेपेक्षा मोठा}
-  {अतिसामान्य स्थानिक}
+  {अतिनेहमी आढळणारा स्थानिक}
   {मध्यम आकाराचा बगळा. तपकिरी शरीर, पांढरे पंख. पिवळी चोच आणि पाय.}
   {परिसरातील पाणवठे आणि दलदलीचे भाग}
   {मासे, बेडूक आणि कीटक खातो. पाण्याजवळ बसून शिकार करतो.}
@@ -407,7 +407,7 @@
 
 \birdentry{गवती बगळा}{\textit{Bubulcus ibis}}
   {मैनेपेक्षा मोठा}
-  {अतिसामान्य स्थानिक}
+  {अतिनेहमी आढळणारा स्थानिक}
   {मध्यम आकाराचा पांढरा बगळा. प्रजनन काळात डोके, छाती, पाठीवर केशरी पिसारे.}
   {परिसरातील गवताळ भाग आणि मोकळ्या जागा}
   {गुरांच्या जवळपास राहतो. कीटक आणि लहान प्राणी खातो.}
@@ -416,7 +416,7 @@
 
 \birdentry{छोटा बगळा}{\textit{Egretta garzetta}}
   {मैनेपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {मध्यम आकाराचा शुभ्र पांढरा बगळा. काळी चोच, काळे पाय, पिवळे पंजे.}
   {परिसरातील पाणवठे आणि दलदलीचे भाग}
   {मासे, बेडूक आणि कीटक खातो. पाण्यात उभा राहून शिकार करतो.}
@@ -425,7 +425,7 @@
 
 \birdentry{पारवा}{\textit{Columba livia}}
   {मैनेपेक्षा मोठा}
-  {अतिसामान्य स्थानिक}
+  {अतिनेहमी आढळणारा स्थानिक}
   {जाडजूड करडा पक्षी. मानेवर इंद्रधनुषी पिसारे. पंखांवर दोन काळे पट्टे, शेपटीवर काळा पट्टा.}
   {परिसरातील इमारती आणि मोकळ्या जागा}
   {कळपाने राहतो. जमिनीवरून धान्य वेचतो. शहरी जीवनाशी जुळवून घेतो.}
@@ -434,7 +434,7 @@
 
 \birdentry{ठिपकेवाला होला}{\textit{Streptopelia chinensis}}
   {मैनेएवढा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {बारीक, लांब शेपटीचा पारवा. गुलाबी-करडा रंग. मानेवर विशिष्ट काळे-पांढरे ठिपके.}
   {परिसरातील वृक्षराजी आणि बागांमध्ये}
   {नेहमी जोडीने किंवा छोट्या कळपात. जमिनीवर धान्य आणि बिया खातो.}
@@ -443,7 +443,7 @@
 
 \birdentry{छोटा तपकिरी होला}{\textit{Streptopelia senegalensis}}
   {मैनेपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {लहान आणि नाजूक पारवा. फिकट तपकिरी रंग, मानेवर जांभळी छटा. मानेच्या बाजूंवर काळे-लाल चौकटी नमुना.}
   {परिसरातील सर्वत्र, विशेषतः मोकळ्या भागात}
   {नेहमी जोडीने दिसतो. जमिनीवर बिया वेचतो. गोड संगीतमय आवाज करतो.}
@@ -452,7 +452,7 @@
 
 \birdentry{टिटवी}{\textit{Vanellus indicus}}
   {मैनेपेक्षा बरीच मोठी}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {मोठी टिटवी. डोळ्यांसमोर लाल मांसल वाढ विशिष्ट. तपकिरी पंख, काळे डोके व छाती, पांढरा चेहरा व तळभाग.}
   {परिसरातील मोकळ्या भागात, विशेषतः पाणवठ्यांजवळ}
   {"डिड-ही-डू-इट" या धोक्याच्या आवाजासाठी प्रसिद्ध. दिवसा-रात्री सक्रिय. कीटक व लहान प्राणी खाते.}
@@ -461,7 +461,7 @@
 
 \birdentry{कोकीळ}{\textit{Eudynamys scolopacea}}
   {कावळ्यापेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नर चमकदार काळा, लाल डोळे. मादी तपकिरी, पांढरे ठिपके, खालून पट्टेदार. लिंगभेद स्पष्ट.}
   {परिसरातील सर्वत्र, विशेषतः वृक्षराजीत}
   {विशिष्ट "कू-ऊ" आवाजासाठी प्रसिद्ध. कावळ्यांच्या घरट्यात परजीवी. फळे व बेरी खातो.}
@@ -479,7 +479,7 @@
 
 \birdentry{पावश्या}{\textit{Hierococcyx varius}}
   {मैनेपेक्षा बराच मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {शिक्र्यासारखा दिसणारा. खालून पट्टेदार. पिवळा डोळ्याभोवतीचा कडा. उडताना शिक्र्यासारखा दिसतो.}
   {परिसरातील वृक्षराजीत सर्वत्र}
   {विशिष्ट "ब्रेन-फीवर" आवाजासाठी प्रसिद्ध. कीटक व अळ्या खातो.}
@@ -488,7 +488,7 @@
 
 \birdentry{भारद्वाज}{\textit{Centropus sinensis}}
   {कावळ्याएवढा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {मोठा काळा पक्षी. केशरी पंख व लांब शेपटी. लाल डोळे व वाकडी काळी चोच विशिष्ट.}
   {परिसरातील दाट वनस्पतीत}
   {लपून-छपून वावरतो. जमिनीवर चालताना दिसतो. खोल गुरगुरण्याचा आवाज. कीटक व लहान प्राणी खातो.}
@@ -497,7 +497,7 @@
 
 \birdentry{राजपोपट}{\textit{Psittacula krameri}}
   {मैनेपेक्षा बराच मोठा}
-  {अतिसामान्य स्थानिक}
+  {अतिनेहमी आढळणारा स्थानिक}
   {हिरवा पोपट, लांब शेपटी. नराच्या मानेभोवती गुलाबी व काळा पट्टा, मादीला नसतो.}
   {परिसरातील सर्वत्र, विशेषतः वृक्षराजीत}
   {आवाजी, कळपवासी. मोठ्या कळपात दिसतो. फळे, बिया व धान्य खातो.}
@@ -515,7 +515,7 @@
 
 \birdentry{टोई पोपट}{\textit{Psittacula cyanocephala}}
   {मैनेएवढा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नराचे डोके जांभळे-लाल, मादीचे निळसर-करडे. दोघांचेही शरीर हिरवे व पिवळट शेपटीचे टोक.}
   {परिसरातील वृक्षराजीत नियमित}
   {नेहमी जोडीने किंवा लहान कळपात. इतर पोपटांपेक्षा जास्त झाडावर राहतो. फळे व बिया खातो.}
@@ -524,7 +524,7 @@
 
 \birdentry{घर पाकोळी}{\textit{Apus affinis}}
   {मैनेपेक्षा लहान}
-  {अतिसामान्य स्थानिक}
+  {अतिनेहमी आढळणारा स्थानिक}
   {लहान घारांडी, पांढरी कंबर व काटेरी शेपटी. गडद तपकिरी-काळा रंग.}
   {परिसरातील इमारतींच्या परिसरात}
   {हवेत तरंगत राहणारा. मोठ्या कळपात इमारतींभोवती घिरट्या घालताना दिसतो.}
@@ -533,7 +533,7 @@
 
 \birdentry{ताड पाकोळी}{\textit{Cypsiurus balasiensis}}
   {चिमणीपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {घरच्या घारांडीपेक्षा लहान, बारीक शरीर व खोलगट काटेरी शेपटी. एकूण धुरकट तपकिरी.}
   {परिसरातील ताडाच्या झाडांभोवती}
   {अतिशय वेगवान उड्डाणक्षम, क्वचितच बसतो. ताडाभोवती दिसतो. हवेतील कीटक खातो.}
@@ -542,7 +542,7 @@
 
 \birdentry{पांढऱ्या छातीचा धीवर}{\textit{Halcyon smyrnensis}}
   {मैनेपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {मोठा खंड्या, चमकदार निळी पाठ, चॉकलेटी डोके व पांढरी छाती. मोठी लाल चोच ठळक.}
   {परिसरातील पाणवठे व बागा}
   {ठळकपणे बसून राहतो, शिकारीसाठी झडप घालतो. मासे, बेडूक, सरडे व मोठे कीटक खातो.}
@@ -551,7 +551,7 @@
 
 \birdentry{सामान्य धीवर}{\textit{Alcedo atthis}}
   {बुलबुलापेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {लहान खंड्या, चमकदार निळी वरची बाजू व केशरी खालची बाजू. लांब चोच व छोटी शेपटी.}
   {परिसरातील पाणवठे व तलावांजवळ}
   {पाण्यावर खाली बसून मासे पकडतो. शिकारीपूर्वी मान हलवतो.}
@@ -560,7 +560,7 @@
 
 \birdentry{वेडा राघू}{\textit{Merops orientalis}}
   {चिमणीपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {बारीक हिरवा पक्षी, निळा गळा, काळी डोळ्यांची पट्टी. लांब मधली शेपटीची पिसे ठळक.}
   {परिसरातील विरळ झाडांच्या मोकळ्या भागात}
   {सुंदर उड्डाणपटू, हवेत कीटक पकडतो. तारा व उघड्या फांद्यांवर बसतो.}
@@ -569,7 +569,7 @@
 
 \birdentry{तांबट}{\textit{Megalaima haemacephala}}
   {बुलबुलापेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {लहान, हिरवा पक्षी, किरमिजी कपाळ व गळा. पिवळा डोळ्याभोवतीचा भाग ठळक.}
   {परिसरातील वृक्षराजीत सर्वत्र}
   {धातूसारख्या 'टुक-टुक-टुक' आवाजासाठी प्रसिद्ध. मुख्यतः फळे, विशेषतः उंबर खातो.}
@@ -578,7 +578,7 @@
 
 \birdentry{धूसर कडा पंकोळी}{\textit{Hirundo concolor}}
   {चिमणीपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {लहान, गडद तपकिरी घारूळी, किंचित काटेरी शेपटी. एकसमान धुरकट रंग.}
   {परिसरातील इमारती व खडकाळ भागात}
   {हवेत कीटक पकडणारी. इमारतींजवळ उडताना दिसते.}
@@ -596,7 +596,7 @@
 
 \birdentry{लाल पुठ्ठ्याची भिंगरी}{\textit{Hirundo daurica}}
   {चिमणीएवढी}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {होलोखेल घारूळीसारखी पण तांबूस कंबर व छोट्या शेपटीची पिसे.}
   {परिसरातील सर्वत्र, विशेषतः इमारतींजवळ}
   {हवेत कीटक पकडणारी, इतर घारूळींच्या कळपात मिसळते.}
@@ -605,7 +605,7 @@
 
 \birdentry{तारबाली भिंगरी}{\textit{Hirundo smithii}}
   {चिमणीएवढी}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {ठळक तारेसारखी लांब शेपटीची पिसे. चमकदार निळसर-काळी वर, पांढरी खाली.}
   {परिसरातील पाणवठे व मोकळ्या जागा}
   {सुंदर उड्डाणपटू, तारांवर बसते. हवेतील कीटक खाते.}
@@ -614,7 +614,7 @@
 
 \birdentry{लांब शेपटीचा खाटीक}{\textit{Lanius schach}}
   {बुलबुलापेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {करडा-तपकिरी वरचा भाग, खालून पांढरा. डोळ्यातून काळी पट्टी. लांब टोकदार शेपटी.}
   {परिसरातील विरळ झाडी असलेले मोकळे भाग}
   {ठळक जागी बसून शिकार करतो. शिकार काट्यांवर टोचून ठेवतो. कीटक, सरडे व लहान पक्षी खातो.}
@@ -623,7 +623,7 @@
 
 \birdentry{हळद्या}{\textit{Oriolus oriolus}}
   {मैनेपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नर सोनेरी पिवळा, काळे पंख व शेपटी. मादी फिकट हिरवी.}
   {परिसरातील वृक्षराजीत}
   {लाजाळू स्वभाव, वृक्षमुकुटात राहतो. गोड बासरीसारखा आवाज. फळे व कीटक खातो.}
@@ -632,7 +632,7 @@
 
 \birdentry{कोतवाल}{\textit{Dicrurus macrocercus}}
   {मैनेपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {चमकदार काळा पक्षी, काटेरी शेपटी. जाड वाकडी चोच.}
   {परिसरातील मोकळ्या झाडांच्या भागात}
   {धाडसी व आक्रमक. इतर पक्ष्यांचा पाठलाग करतो. हवेत कीटक पकडण्यात तरबेज.}
@@ -650,7 +650,7 @@
 
 \birdentry{साळुंकी}{\textit{Acridotheres tristis}}
   {मैना}
-  {अतिसामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {तपकिरी शरीर, काळे डोके, पिवळी चोच व पाय. उडताना पंखांवर पांढरे पट्टे दिसतात.}
   {परिसरातील सर्वत्र विपुल}
   {धीट, जुळवून घेणारा पक्षी. जोडीने किंवा कळपात दिसतो. सर्व प्रकारचे अन्न खातो.}
@@ -659,7 +659,7 @@
 
 \birdentry{जंगली मैना}{\textit{Acridotheres fuscus}}
   {मैना}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {सामान्य मैनेसारखी पण अधिक करडी. चोचीजवळ पिसांची झुपके. नारिंगी-पिवळी चोच व पाय.}
   {परिसरातील वृक्षराजी व बागा, शहरी भागात कमी}
   {नेहमी जोडीने किंवा छोट्या कळपात. सामान्य मैनेपेक्षा जास्त झाडावर राहते. कीटक व फळे खाते.}
@@ -668,7 +668,7 @@
 
 \birdentry{भांगपाडी मैना}{\textit{Sturnia pagodarum}}
   {मैना}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {विशिष्ट बदामी रंगाची मैना, काळी टोपी, करडे पंख व पांढरा तळभाग.}
   {परिसरातील वृक्षराजी व बागांमध्ये}
   {जोडीने किंवा छोट्या कळपात दिसते. फळे, बेरी व कीटक खाते.}
@@ -677,7 +677,7 @@
 
 \birdentry{दयाळ}{\textit{Copsychus saularis}}
   {बुलबुल}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नर काळा-पांढरा ठळक रंगसंगती, मादी अधिक करडी. लांब शेपटी वर धरतो.}
   {परिसरातील वृक्षराजी व बागांमध्ये सर्वत्र}
   {धीट व गोड आवाजी गायक. कीटक व बेरी खातो.}
@@ -686,7 +686,7 @@
 
 \birdentry{पांढऱ्या कंठाची नाचण}{\textit{Rhipidura albogularis}}
   {चिमणीपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {लहान काळा-पांढरा पक्षी, ठिपकेदार छाती, पांढरी भुवई व पंख्यासारखी शेपटी पसरून ठेवतो.}
   {परिसरातील दाट झाडी असलेले भाग}
   {चपळ व कसरती, कीटक पकडताना शेपटी पसरतो. हवेत छोटी उड्डाणे करून कीटक पकडतो.}
@@ -695,7 +695,7 @@
 
 \birdentry{कवड्या गप्पीदास}{\textit{Saxicola caprata}}
   {बुलबुलापेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नर काळा, पांढरी कंबर व पंखांवर पट्टे; मादी तपकिरी, खालून फिकी.}
   {परिसरातील विरळ झुडपे असलेले मोकळे भाग}
   {झुडपे व कुंपणांवर ठळकपणे बसतो. छोटी उड्डाणे करून कीटक पकडतो.}
@@ -704,7 +704,7 @@
 
 \birdentry{लाल बुड्या बुलबुल}{\textit{Pycnonotus cafer}}
   {बुलबुल}
-  {अतिसामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {गडद तपकिरी-काळा पक्षी, खवल्यांसारखी रचना, लाल मूळशेपटी व काळी शिखा विशिष्ट.}
   {परिसरातील सर्वत्र}
   {सक्रिय व आवाजी. जोडीने किंवा लहान कळपात. फळे व कीटक खातो.}
@@ -713,7 +713,7 @@
 
 \birdentry{शिपाई बुलबुल}{\textit{Pycnonotus jocosus}}
   {बुलबुल}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {तपकिरी वरचा भाग, पांढरा खालचा भाग. लाल कानपट्टी व टोकदार काळी शिखा विशिष्ट.}
   {परिसरातील वृक्षराजी व बागांमध्ये}
   {जीवंत पक्षी, गोड आवाजी. नेहमी जोडीने. फळे व कीटक खातो.}
@@ -722,7 +722,7 @@
 
 \birdentry{राखी सातभाई}{\textit{Turdoides malcolmi}}
   {मैनेपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {करडा-तपकिरी पक्षी, फिकट रेघा. लांब टप्प्याटप्प्यांची शेपटी व वाकडी चोच.}
   {परिसरातील मोकळी झुडपे व बागा}
   {गटाने राहतो, आवाजी. जमिनीवर पाने उलटून कीटक व बेरी खातो.}
@@ -731,7 +731,7 @@
 
 \birdentry{टिकेलची निळी माशीमार}{\textit{Muscicapa tickelliae}}
   {बुलबुलापेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नर चमकदार निळा वरून, तांबूस खालून. मादी फिकट.}
   {परिसरातील दाट झाडीच्या भागात}
   {सक्रिय पक्षी, बसल्या जागेवरून छोटी उड्डाणे करून कीटक पकडतो. गोड शिट्टीसारखा आवाज.}
@@ -740,7 +740,7 @@
 
 \birdentry{राखी वटवट्या}{\textit{Prinia socialis}}
   {चिमणीपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {राखाडी वरचा भाग, पांढरा खालचा भाग. लांब टप्प्याटप्प्यांची शेपटी वर करून धरतो.}
   {परिसरातील बागा व झुडपांच्या भागात}
   {सक्रिय पक्षी, वनस्पतीतून कर्कश आवाज करत फिरतो.}
@@ -749,7 +749,7 @@
 
 \birdentry{रान वटवट्या}{\textit{Prinia sylvatica}}
   {चिमणीपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {करडा-तपकिरी वरचा भाग, फिकट खालचा भाग. राखी वटवट्यापेक्षा गडद.}
   {परिसरातील गवताळ व झुडपाळ भाग}
   {लपून-छपून राहतो, मोठ्या आवाजाने ओळख करून देतो.}
@@ -758,7 +758,7 @@
 
 \birdentry{शिंपी}{\textit{Orthotomus sutorius}}
   {चिमणीपेक्षा बराच लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {छोटा सुतार पक्षी, लांब उभी शेपटी. जैतुनी-हिरवा वरचा भाग, पांढरा खालचा भाग, तांबूस टाळू.}
   {परिसरातील बागा व दाट झुडपांच्या भागात}
   {सक्रिय पक्षी, सतत वनस्पतीतून फिरत राहतो. मोठा 'टू-विट टू-विट' आवाज.}
@@ -776,7 +776,7 @@
 
 \birdentry{चिमणी}{\textit{Passer domesticus}}
   {चिमणी}
-  {अतिसामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नर करडा-तपकिरी, काळा गळपट्टा व तांबूस मान; मादी एकसमान तपकिरी.}
   {परिसरातील इमारती व मानवी वस्तीजवळ}
   {कळपवासी, मुख्यतः धान्य व बिया खाते.}
@@ -785,7 +785,7 @@
 
 \birdentry{सुगरण}{\textit{Ploceus philippinus}}
   {चिमणी}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {प्रजननकाळात नर चमकदार पिवळा, तपकिरी पाठ; मादी चिमणीसारखी.}
   {परिसरातील गवताळ भाग व बोरूची झाडी}
   {वसाहतीत राहतो. नर कलात्मक लोंबती घरटी बांधतो. गवताचे बी खातो.}
@@ -794,7 +794,7 @@
 
 \birdentry{चरक}{\textit{Copsychus fulicatus}}
   {चिमणी}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नर चमकदार काळा, पंखांवर पांढरे पट्टे. मादी तपकिरी. शेपटी नेहमी वर धरून असतो.}
   {परिसरातील मोकळे भाग व झुडपाळ प्रदेश}
   {जमिनीवर सक्रिय, वारंवार शेपटी वर करतो. गोड आवाज व शिट्ट्या वाजवतो.}
@@ -803,7 +803,7 @@
 
 \birdentry{चष्मेवाला}{\textit{Zosterops palpebrosus}}
   {चिमणीपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {छोटा जैतुनी-हिरवा पक्षी, डोळ्याभोवती पांढरा कडा विशिष्ट. पिवळा गळा व शेपटीखालचा भाग.}
   {परिसरातील वृक्षराजी व बागांमध्ये}
   {चपळ व कसरती. छोट्या कळपात पानांमध्ये फिरतो. कीटक व मधुरस खातो.}
@@ -812,7 +812,7 @@
 
 \birdentry{ठिपकेवाली मनोली}{\textit{Lonchura punctulata}}
   {चिमणीपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {लहान तपकिरी फिंच, छातीवर खवल्यांसारखी रचना. जाड छोटी चोच.}
   {परिसरातील गवताळ व झुडपाळ भाग}
   {कळपाने राहते, गवताचे बी खाते. गोड चिवचिव आवाज.}
@@ -821,7 +821,7 @@
 
 \birdentry{टकाचोर}{\textit{Dendrocitta vagabunda}}
   {मैनेपेक्षा बराच मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {मोठा तांबूस व काळा पक्षी, लांब टप्प्याटप्प्यांची शेपटी. करडी मान व पांढऱ्या टोकांची शेपटी विशिष्ट.}
   {परिसरातील वृक्षराजीत}
   {धीट व कुतूहली. लहान गटात दिसतो. फळे, कीटक व लहान प्राणी खातो.}
@@ -830,7 +830,7 @@
 
 \birdentry{कावळा}{\textit{Corvus splendens}}
   {कावळा}
-  {अतिसामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {करडा व काळा कावळा, विशिष्ट करड्या मानेचा पट्टा.}
   {परिसरातील सर्वत्र, विशेषतः मानवी वस्तीजवळ}
   {धीट व बुद्धिमान. सर्व प्रकारचे अन्न खातो.}
@@ -839,7 +839,7 @@
 
 \birdentry{डोमकावळा}{\textit{Corvus macrorhynchos}}
   {कावळ्यापेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {शहरी कावळ्यापेक्षा मोठा, संपूर्ण काळा, जाड चोच. एकांडा स्वभाव.}
   {परिसरातील वृक्षराजीत व आजूबाजूच्या भागात}
   {शहरी कावळ्यापेक्षा सावध. एकटा किंवा जोडीने दिसतो. सर्व प्रकारचे अन्न खातो.}
@@ -848,7 +848,7 @@
 
 \birdentry{पिंगळा}{\textit{Athene brama}}
   {मैनेपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {छोटा, जाडजूड घुबड, पांढरे ठिपके. मोठे पिवळे डोळे व पांढऱ्या भुवया त्याला गंभीर चेहरा देतात.}
   {परिसरातील वृक्षराजी व बागांमध्ये}
   {पहाटे व संध्याकाळी सक्रिय. जागरूक असताना मान हलवतो. कीटक व लहान प्राणी खातो.}
@@ -866,7 +866,7 @@
 
 \birdentry{भारतीय राखी धनेश}{\textit{Ocyceros birostris}}
   {कावळा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {मोठा करडा पक्षी, लांब शेपटी व टोपीसारखी वाढ चोचीवर. मादीची टोपी लहान.}
   {परिसरातील मोठी जुनी झाडे असलेल्या भागात}
   {नेहमी जोडीने झाडावरून झाडावर जातो. मुख्यतः फळे, विशेषतः उंबर खातो.}
@@ -875,7 +875,7 @@
 
 \birdentry{भारतीय नीलपंख}{\textit{Coracias benghalensis}}
   {मैनेपेक्षा बराच मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {कावळ्याएवढा पक्षी, चमकदार निळे पंख व शेपटी. तपकिरी डोके व पाठ.}
   {परिसरातील विरळ झाडी असलेल्या मोकळ्या भागात}
   {ठळक जागी बसून राहतो, हवेत नाट्यमय लोंबकळत झेप घेतो. मोठे कीटक व लहान सरडे खातो.}
@@ -884,7 +884,7 @@
 
 \birdentry{काळ्या डोक्याचा कोकीळ-खाटिक}{\textit{Coracina melanoptera}}
   {मैनेपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नर करडा, काळे डोके; मादी करडी, फिकट आडव्या रेघांसह.}
   {परिसरातील वृक्षराजी व बागांमध्ये}
   {पद्धतशीरपणे पानांमध्ये कीटक शोधतो. इतर शिकारी पक्ष्यांच्या कळपात मिसळतो.}
@@ -893,7 +893,7 @@
 
 \birdentry{छोटा गोमेट}{\textit{Pericrocotus cinnamomeus}}
   {चिमणी}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नर काळा व नारिंगी; मादी करडी व पिवळी. दोघांनाही लांब शेपटी.}
   {परिसरातील वृक्षराजीत सर्वत्र}
   {सक्रिय, छोट्या कळपात वृक्षमुकुटात फिरतो. गोड शिट्टीसारखा आवाज.}
@@ -902,7 +902,7 @@
 
 \birdentry{टिकेलचा फुलटोचा}{\textit{Dicaeum erythrorhynchos}}
   {चिमणीपेक्षा बराच लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {अतिलहान पक्षी, करडा-तपकिरी वर, मळकट पांढरा खाली. छोटी शेपटी व वाकडी चोच.}
   {परिसरातील फुले व फळे असलेल्या झाडांवर}
   {अत्यंत सक्रिय, फुलांमध्ये झपाझप फिरतो. बेरी व मधुरस खातो.}
@@ -929,7 +929,7 @@
 
 \birdentry{पांढऱ्या भुबईचा धोबी}{\textit{Motacilla maderaspatensis}}
   {चिमणीपेक्षा मोठा}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {मोठा काळा-पांढरा हलवा, ठळक पांढरी भुवई. लांब शेपटी सतत वर-खाली हलवतो.}
   {परिसरातील पाणवठे व मोकळ्या जागा}
   {सक्रिय शिकारी, धावत-चालत शेपटी हलवत राहतो. नेहमी जोडीने दिसतो.}
@@ -938,7 +938,7 @@
 
 \birdentry{सुभग}{\textit{Aegithina tiphia}}
   {चिमणीपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {प्रजननकाळात नर चमकदार पिवळा व काळा; इतर वेळी व मादी हिरवट-पिवळी. पांढरे पंखपट्टे विशिष्ट.}
   {परिसरातील दाट वृक्षराजी असलेल्या भागात}
   {सक्रिय पक्षी, सतत पानांमध्ये फिरत राहतो. गोड संगीतमय आवाज. मुख्यतः कीटक खातो.}
@@ -947,7 +947,7 @@
 
 \birdentry{कवडी रामगंगा}{\textit{Parus cinereus}}
   {चिमणीपेक्षा लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {छोटा करडा पक्षी, काळी टोपी व गळा, पांढरे गाल व खालचा भाग.}
   {परिसरातील वृक्षराजी व बागांमध्ये}
   {सक्रिय व कसरती, कीटक पकडताना उलटा लटकतो. कीटक व बिया खातो.}
@@ -956,7 +956,7 @@
 
 \birdentry{जांभळा शिंजीर}{\textit{Cinnyris asiaticus}}
   {चिमणीपेक्षा बराच लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {प्रजननकाळात नर चमकदार जांभळा-काळा; इतर वेळी व मादी जैतुनी-तपकिरी वर, पिवळी खाली.}
   {परिसरातील फुलझाडे असलेल्या भागात}
   {अत्यंत सक्रिय, फुलांसमोर तरंगतो. लांब वाकडी चोच मधुरसासाठी. लहान कीटकही पकडतो.}
@@ -965,7 +965,7 @@
 
 \birdentry{जांभळ्या पुठ्ठ्याचा शिंजीर}{\textit{Leptocoma zeylonica}}
   {चिमणीपेक्षा बराच लहान}
-  {सामान्य स्थानिक}
+  {नेहमी आढळणारा स्थानिक}
   {नराचा वरचा भाग चमकदार जांभळा-निळा, पोट पिवळे. मादी जैतुनी वर, पिवळी खाली.}
   {परिसरातील बागा व फुलझाडे असलेल्या भागात}
   {जांभळ्या सूर्यपक्ष्यासारखाच सक्रिय, फुलांसमोर तरंगतो. मधुरस व लहान कीटक खातो.}
