--- a/latex/bird_guide_marathi.tex
+++ b/latex/bird_guide_marathi.tex
@@ -240,7 +240,7 @@
 
 \vspace{0.5cm}
 {\small अधिक माहितीसाठी भेट द्या: 
-{\latintext \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{https://creativecommons.org/licenses/by-nc-sa/4.0/}}}
+{\latinmono \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{https://creativecommons.org/licenses/by-nc-sa/4.0/}}}
 
 \vspace{1cm}
 
