Add GitHub repository link and update project information in HTML and LaTeX files

--- a/latex/bird_guide.tex
+++ b/latex/bird_guide.tex
@@ -271,6 +271,8 @@ All rights reserved.
   The nomenclature follows current taxonomic standards, 
   with both scientific and common names provided for 
   easy reference.
+  \par\medskip
+  This project is available on GitHub at \href{https://github.com/yogeshw/sppu-bird-guide}{https://github.com/yogeshw/sppu-bird-guide}. Please raise issues or submit pull requests for updates.
 }
 
 \vspace{1cm}
