--- a/latex/bird_guide_marathi.tex
+++ b/latex/bird_guide_marathi.tex
@@ -221,7 +221,7 @@
 % Add license text after title
 \begin{center}
 \vspace{1cm}
-{\large हे पुस्तक  क्रिएटिव्ह कॉमन्स अट्रिब्यूशन-नॉनकमर्शियल-शेअरअलाइक ४.० आंतरराष्ट्रीय परवान्यांतर्गत ({\latintext CC BY-NC-SA 4.0}) उपलब्ध आहे.}
+{\large ही पुस्तिका क्रिएटिव्ह कॉमन्स अट्रिब्यूशन-नॉनकमर्शियल-शेअरअलाइक ४.० आंतरराष्ट्रीय परवान्यांतर्गत ({\latintext CC BY-NC-SA 4.0}) उपलब्ध आहे.}
 
 \vspace{0.5cm}
 {\normalsize आपल्याला खालील गोष्टींची मुभा आहे:
@@ -339,7 +339,9 @@
   \end{itemize}
 }{%
   \section*{\textbf{या मार्गदर्शिकेबद्दल}}
-  या पुस्तिकेत विद्यापीठ परिसरात आढळणाऱ्या विविध पक्षी प्रजातींची माहिती आहे. कॅम्पसमध्ये नोंदवलेल्या पक्ष्यांच्या प्रजातींपैकी सर्वात सामान्य प्रजाती, ज्या सुमारे ७० आहेत, त्यांचा समावेश येथे केला आहे.
+  या पुस्तिकेत विद्यापीठ परिसरात आढळणाऱ्या विविध पक्षी प्रजातींची माहिती आहे. कॅम्पसमधील नोंदवलेल्या सर्वसामान्य प्रजातींचा समावेश येथे केला आहे.
+  \par\medskip
+  हा प्रकल्प  {\latintext\href{https://github.com/yogeshw/sppu-bird-guide}{https://github.com/yogeshw/sppu-bird-guide}} येथे उपलब्ध आहे. कृपया अद्यतनांसाठी इश्यू किंवा पुल विनंत्या पाठवाव्यात.
 }
 
 \birdentry{घार}{\textit{Milvus migrans}}
